manifests/oauth2-proxy/service.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
spec:
  selector:
    k8s-app: oauth2-proxy
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 4180
    targetPort: 4180
---
